feat: intial GUI work with data transmission